@@ -1,5 +1,7 @@
 pgbconsole (current development) unstable; urgency=low
 
+  * Allow specify connections file with --file option.
+  * Rewrite arg parse and init_conn funcs.
   * Add pg_stat_statements to sys screen.
   * Add colors support.
   * Add log tail screen, full log view with PAGER.
